--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -20,7 +20,7 @@ const props = Astro.props;
             </li>
             <li>
                 <a
-                    href="https://x.com/nfalza4638"
+                    href="https://x.com/_nick909"
                     class="inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
                     ><Icon.TwitterLogo size="20" class="inline-block" /><span
                         class="mx-2">twitter</span
