--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
 		<p>i like a lot of things, such as:</p>
 		<ul class="favlist">
 			<li>IT and tech in general 💻</li>
-			<li>football ⚽ (favorite teams are: AC Milan, Real Madrid and SSC Napoli)</li>
+			<li>football ⚽ (favorite team: AC Milan)</li>
 			<li>taking pictures 📸</li>
 			<li>hanging out with friends</li>
 			<li>collecting game consoles and emulating them (legally 😏)</li>
