--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,25 +9,18 @@
                 >home</a
             >
         </li>
-        <!-- <li class="mr-6">
+        <li class="mr-6">
             <a
-                href="/blog"
+                href="/projects"
                 class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
-                >blog</a
+                >projects</a
             >
         </li>
         <li class="mr-6">
             <a
-                href="/history"
+                href="/socials"
                 class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
-                >history</a
-            >
-        </li>-->
-        <li class="mr-6">
-            <a
-                href="/contacts"
-                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
-                >contacts</a
+                >socials</a
             >
         </li>
     </ul>
@@ -39,6 +32,8 @@
         "//javascript is awesome!",
         "//took me two days for this but i love it",
         "//i 🩷 astro",
+        "//WHY IS THERE A SPACE BACKGROUND??",
+        "//busy with school, like always..."
     ];
 
     let randomIndex = Math.floor(Math.random() * phrases.length);
