--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ import 'animate.css';
 		body > div:first-child,
 		div#__next,
 		div#__next > div {
-			@apply h-full bg-base text-mauve;
+			@apply h-full text-text;
 		}
 	}
 	
@@ -55,5 +55,9 @@ import 'animate.css';
 
 	.icon-link .icon {
 		font-size: 24px; 
+	}
+
+	body {
+		background-image: url('/public/back.jpg');
 	}
 </style>
