--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -4,9 +4,9 @@ import * as Icon from "@astropub/icons";
 const props = Astro.props;
 ---
 
-<Layout title="contacts - nick909">
+<Layout title="socials - nick909">
     <main class="animate__animated animate__fadeIn">
-        <h1 class="font-bold text-3xl">contacts</h1>
+        <h1 class="font-bold text-3xl py-2">socials</h1>
         <p>you can find me on everything that is listed here:</p>
         <ul class="linklist py-4 text-lg">
             <li>
