general cosmetic edit of my website

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,8 @@ import Layout from "../layouts/Layout.astro";
 	<main class="animate__animated animate__fadeIn">
 		<h1 class="font-bold text-3xl py-3">Hi 👋</h1>
 		<p>i am nick909, a student and developer in Milan, Italy 🇮🇹</p>
-		<h1 class="font-bold text-3xl py-3">What i like/dislike</h1>
+		<!--have to work on what to put inside the index -->
+		<!--<h1 class="font-bold text-3xl py-3">What i like/dislike</h1>
 		<p>i like a lot of things, such as:</p>
 		<ul class="favlist">
 			<li>IT and tech in general 💻</li>
@@ -14,7 +15,7 @@ import Layout from "../layouts/Layout.astro";
 			<li>taking pictures 📸</li>
 			<li>hanging out with friends</li>
 			<li>collecting game consoles and emulating them (legally 😏)</li>
-		</ul>
+		</ul>--->
 	</main>
 </Layout>
 
