--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -12,7 +12,7 @@ const props = Astro.props;
             <li>
                 <a
                     href="https://www.youtube.com/@thisisnick909"
-                    class="inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
+                    class="font-bold inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
                     ><Icon.Video size="20" class="inline-block" /><span
                         class="mx-2">youtube</span
                     ></a
@@ -20,17 +20,8 @@ const props = Astro.props;
             </li>
             <li>
                 <a
-                    href="https://x.com/_nick909"
-                    class="inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
-                    ><Icon.TwitterLogo size="20" class="inline-block" /><span
-                        class="mx-2">twitter</span
-                    ></a
-                >
-            </li>
-            <li>
-                <a
                     href="mailto:thisisnick909@gmail.com"
-                    class="inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
+                    class="font-bold inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
                     ><Icon.EnvelopeClosed size="20" class="inline-block" /><span
                         class="mx-2">mail</span
                     ></a
@@ -39,7 +30,7 @@ const props = Astro.props;
             <li>
                 <a
                     href="#"
-                    class="inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
+                    class="font-bold inline-block align-center relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
                     ><Icon.Moon size="20" class="inline-block" /><span
                         class="mx-2 copy-to-clipboard" data-copy="nick909_.">discord</span
                     ></a
