--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,21 +5,21 @@
         <li class="mr-6">
             <a
                 href="/"
-                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
+                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
                 >home</a
             >
         </li>
         <li class="mr-6">
             <a
                 href="/projects"
-                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
+                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
                 >projects</a
             >
         </li>
         <li class="mr-6">
             <a
                 href="/socials"
-                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-mauve"
+                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
                 >socials</a
             >
         </li>
@@ -29,7 +29,7 @@
     let spanElement = document.getElementById("randomtext");
     let phrases = [
         "//wow, refreshing!",
-        "//javascript is awesome!",
+        "//astro is awesome!",
         "//took me two days for this but i love it",
         "//i 🩷 astro",
         "//WHY IS THERE A SPACE BACKGROUND??",
