--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,10 +7,9 @@ import Layout from "../layouts/Layout.astro";
 		<h1 class="font-bold text-3xl py-2">projects</h1>
 		<p class="py-2">here are some of the projects i'm working on:</p>
 		<ul class="favlist">
-			<li><a class="font-bold" href="https://spacetv.nick909.dev">SpaceTV: my self-hosted radio</a></li>
+			<li><a class="font-bold relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender" href="https://spacetv.nick909.dev">SpaceTV: my self-hosted radio</a></li>
 			<li>more coming soon...</li>
 		</ul>
-        <p class="py-2 font-bold">unfortunately, i'm currently busy with school so i can't work on new projects but just as a spoiler, i'm gonna make a ZX Spectrum emulator with some classic games soon 👀</p>
 	</main>
 </Layout>
 
