--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,6 +11,13 @@
         </li>
         <li class="mr-6">
             <a
+                href="/blog"
+                class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
+                >blog</a
+            >
+        </li>
+        <li class="mr-6">
+            <a
                 href="/projects"
                 class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender"
                 >projects</a
