--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -48,6 +48,7 @@ import 'animate.css';
 		div#__next,
 		div#__next > div {
 			@apply h-full text-text;
+			padding: 0 1.5rem 1.5rem 1.5rem;
 			font-family: "Unbounded", sans-serif;
 		}
 	}
