--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 <nav class="sticky py-5">
     <h1 class="text-3xl font-bold">nick909</h1>
-    <span class="flex" id="randomtext">//missingno</span>
+    <a href="/posts/easter-eggs-hidden-treasures" class="flex" id="randomtext">//missingno</a>
     <ul class="flex justify-start py-2">
         <li class="mr-6">
             <a
