--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import * as Icon from '@astropub/icons'
 const props = Astro.props;
 ---
 
-<footer class="fixed bottom-0 left-0 right-0">
+<footer class="sticky bottom-0 left-0 right-0">
     <div class="py-4">
         <h1 class="font-bold text-center">made in 🇮🇹 with 🩷</h1>
         <p class="text-xs font-bold text-center py-1">(built using <a class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender" href="https://astro.build">astro</a> and <a class="relative py-1 after:absolute after:bottom-0 after:left-0 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition-all after:origin-left after:h-[2px] after:bg-lavender" href="https://tailwindcss.com/">tailwindcss</a>)</p>
